--- a/main/templates/main/header_layout.html
+++ b/main/templates/main/header_layout.html
@@ -53,7 +53,27 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link waves-effect" data-toggle="modal"
                        data-target="#exampleModal">LOGIN</a>
-
+                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                         aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header text-center">
+                                    <h3>Login</h3>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="form">
+                                    <label for="username">Username:</label>
+                                    <input type="text" id="username" name="username" required/>
+                                    <label for="password">Password:</label>
+                                    <input type="password" id="defaultForm-pass" class="form-control validate"
+                                           required>
+                                    <input type="submit" value="Submit"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link waves-effect" data-toggle="modal"
