--- a/catalog/templates/catalog/movie_page.html
+++ b/catalog/templates/catalog/movie_page.html
@@ -68,10 +68,10 @@ Movie Catalog
                         </div>
                         <div class="action">
                             <div class="add-to-likes">
-                                <a href="#" class="round-btn"><img class="icon" src="images/heart.png" alt=""></a>
+                                <a href="#" class="round-btn"><img class="icon" src="{% static 'main/img/heart.png'%}" alt=""></a>
                             </div>
                             <div class="add-to-list">
-                                <a href="#" class="round-btn"><img class="icon" src="images/save.png" alt=""></a>
+                                <a href="#" class="round-btn"><img class="icon" src="{% static 'main/img/save.png' %}" alt=""></a>
                             </div>
                         </div>
                         <div class="movie-details">
