add data to database

--- a/catalog/templates/catalog/movie_page.html
+++ b/catalog/templates/catalog/movie_page.html
@@ -12,7 +12,7 @@ Movie Catalog
             <section>
                 <div class="movie_info">
 
-                    <img class="movie" src="movie.cover_image" alt="" />
+                    <img class="movie" src="{% static movie.cover_image %}" alt="" />
 
                     <div class="info">
                         <div class="title">
