--- a/users/templates/user_page.html
+++ b/users/templates/user_page.html
@@ -12,7 +12,7 @@ Movie Catalog
     <h2>Account Information</h2>
   <section id="account-info">
     <div class="photo">
-      <a href="#" class="round-btn"><img class="icon" src="images/user.png" alt=""></a>
+      <a href="#" class="round-btn"><img class="icon" src="img/user.png" alt=""></a>
     </div>
     <div class="info">
     <p>Name: John Doe</p>
