--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -13,15 +13,17 @@ MovieDatabase
                     <h1>MOVIESbase</h1>
                     <h3>Мільйони фільмів, серіалів і людей. Досліджуйте зараз.</h3>
                 </div>
+                <form action="/search" method="get">
                 <div class="row height d-flex justify-content-center align-items-center">
                     <div class="col-md-8">
                         <div class="search">
                             <i class="fa fa-search"></i>
-                            <input type="text" class="form-control" placeholder="Search for a movie..." />
+                            <input type="text" class="form-control" placeholder="Search for a movie..." name="query"/>
                             <button class="button-28" role="button">Search</button>
                         </div>
                     </div>
                 </div>
+                </form>
             </div>
         </div>
     </div>
@@ -34,126 +36,22 @@ MovieDatabase
         </div>
         <div class="container-fluid">
             <div class="scrolling-wrapper-flexbox">
+               {% for movie in movies %}
                 <div class="card">
                     <div class="image">
                         <div class="wrapper">
-                            <a class="image" href="" title="Aftersun">
-                                <img class="poster" src="/images/movie-1.jpg" alt="" />
+                            <a class="image" href="{{movie.id}}/" title="movie.cover_image">
+                                <img class="poster" src="{% static movie.cover_image %}" alt="" />
                             </a>
                         </div>
                     </div>
-                    <div class="name"><a href="" title="Aftersun">Aftersun</a></div>
-                    <p>2022 ‧ Drama ‧ 1h 36m</p>
-                    <p class="rating">Rating: 4.5</p>
+                    <div class="name"><a href="" title="{{movie.title}}">{{movie.title}}</a></div>
+
+                    <p>{{movie.release_date.year}} ‧ {% for genre in movie.genre.all %} {{genre}} ‧{% endfor %} {{movie.runtime}}</p>
+
+                    <p class="rating">Rating: {{movie.rating}}</p>
                 </div>
-                <div class="card">
-                    <div class="image">
-                        <div class="wrapper">
-                            <a class="image" href="" title="Avatar">
-                                <img class="poster" src="/images/movie-2.jpg" alt="" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="name"><a href="" title="Aftersun">Avatar</a></div>
-                    <p>2022 ‧ NF ‧ 3h 12m</p>
-                    <p class="rating">Rating: 4.5</p>
-                </div>
-                <div class="card">
-                    <div class="image">
-                        <div class="wrapper">
-                            <a class="image" href="" title="Vavilon">
-                                <img class="poster" src="/images/movie-3.jpg" alt="" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="name"><a href="" title="Aftersun">Vavilon</a></div>
-                    <p>2022 ‧ Drama ‧ 3h 12m </p>
-                    <p class="rating">Rating: 4.5</p>
-                </div>
-                <div class="card">
-                    <div class="image">
-                        <div class="wrapper">
-                            <a class="image" href="" title="Aftersun">
-                                <img class="poster" src="/images/movie-1.jpg" alt="" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="name"><a href="" title="Aftersun">Aftersun</a></div>
-                    <p>2022 ‧ Drama ‧ 1h 36m</p>
-                    <p class="rating">Rating: 4.5</p>
-                </div>
-                <div class="card">
-                    <div class="image">
-                        <div class="wrapper">
-                            <a class="image" href="" title="Aftersun">
-                                <img class="poster" src="/images/movie-1.jpg" alt="" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="name"><a href="" title="Aftersun">Aftersun</a></div>
-                    <p>2022 ‧ Drama ‧ 1h 36m</p>
-                    <p class="rating">Rating: 4.5</p>
-                </div>
-                <div class="card">
-                    <div class="image">
-                        <div class="wrapper">
-                            <a class="image" href="" title="Aftersun">
-                                <img class="poster" src="/images/movie-1.jpg" alt="" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="name"><a href="" title="Aftersun">Aftersun</a></div>
-                    <p>2022 ‧ Drama ‧ 1h 36m</p>
-                    <p class="rating">Rating: 4.5</p>
-                </div>
-                <div class="card">
-                    <div class="image">
-                        <div class="wrapper">
-                            <a class="image" href="" title="Aftersun">
-                                <img class="poster" src="/images/movie-1.jpg" alt="" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="name"><a href="" title="Aftersun">Aftersun</a></div>
-                    <p>2022 ‧ Drama ‧ 1h 36m</p>
-                    <p class="rating">Rating: 4.5</p>
-                </div>
-                <div class="card">
-                    <div class="image">
-                        <div class="wrapper">
-                            <a class="image" href="" title="Aftersun">
-                                <img class="poster" src="/images/movie-1.jpg" alt="" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="name"><a href="" title="Aftersun">Aftersun</a></div>
-                    <p>2022 ‧ Drama ‧ 1h 36m</p>
-                    <p class="rating">Rating: 4.5</p>
-                </div>
-                <div class="card">
-                    <div class="image">
-                        <div class="wrapper">
-                            <a class="image" href="" title="Aftersun">
-                                <img class="poster" src="/images/movie-1.jpg" alt="" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="name"><a href="" title="Aftersun">Aftersun</a></div>
-                    <p>2022 ‧ Drama ‧ 1h 36m</p>
-                    <p class="rating">Rating: 4.5</p>
-                </div>
-                <div class="card">
-                    <div class="image">
-                        <div class="wrapper">
-                            <a class="image" href="" title="Avatar">
-                                <img class="poster" src="/images/movie-2.jpg" alt="" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="name"><a href="" title="Aftersun">Avatar</a></div>
-                    <p>2022 ‧ Drama ‧ 1h 36m</p>
-                    <p class="rating">Rating: 4.5</p>
-                </div>
+            {% endfor %}
             </div>
         </div>
     </section>
