--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -40,7 +40,7 @@ MovieDatabase
                 <div class="card">
                     <div class="image">
                         <div class="wrapper">
-                            <a class="image" href="{{movie.id}}/" title="movie.cover_image">
+                            <a class="image" href="/movie/{{movie.id}}/" title="movie.cover_image">
                                 <img class="poster" src="{% static movie.cover_image %}" alt="" />
                             </a>
                         </div>
