--- a/users/templates/user_page.html
+++ b/users/templates/user_page.html
@@ -15,7 +15,7 @@ Movie Catalog
       <a href="#" class="round-btn"><img class="icon" src="img/user.png" alt=""></a>
     </div>
     <div class="info">
-    <p>Name: John Doe</p>
+    <p>Name: {{username}}</p>
     <p>Email: john.doe@example.com</p>
     <p>Membership: Premium</p>
   </div>
@@ -36,3 +36,4 @@ Movie Catalog
   </section>
   </div>
 </main>
+{% endblock %}
