--- a/main/static/main/css/login.css
+++ b/main/static/main/css/login.css
@@ -5,14 +5,12 @@
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px #999;
-    width: 300px;
     margin: auto;
     margin-bottom: 5px;
-    height: 329px;
   }
   .modal-content{
-    width: 348px;
-    height: 413px;
+    width: auto;
+    height: auto;
     background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(108,111,115,1) 68%);
     border-radius: 1rem;
   }
