--- a/main/templates/main/header_layout.html
+++ b/main/templates/main/header_layout.html
@@ -38,10 +38,10 @@
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a href="/" class="nav-link waves-effect">HOME</a>
+                    <a href="{% url 'index' %}" class="nav-link waves-effect">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/movie" class="nav-link waves-effect">MOVIES</a>
+                    <a href="{% url 'catalog' %}" class="nav-link waves-effect">MOVIES</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link waves-effect">INFO</a>
@@ -50,77 +50,25 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto navbar-right">
+                {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a href="#" class="nav-link waves-effect" data-toggle="modal"
+                    <a href="{% url 'user' username=request.user.username %}" class="nav-link waves-effect">User</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'logout' %}" class="nav-link waves-effect">Log-out</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a href="{% url 'login_user' %}" class="nav-link waves-effect" data-toggle="modal"
                        data-target="#exampleModal">LOGIN</a>
-                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-                         aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header text-center">
-                                    <h3>Login</h3>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="form">
-                                    <label for="username">Username:</label>
-                                    <input type="text" id="username" name="username" required/>
-                                    <label for="password">Password:</label>
-                                    <input type="password" id="defaultForm-pass" class="form-control validate"
-                                           required>
-                                    <input type="submit" value="Submit"/>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    {% include 'login.html' %}
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link waves-effect" data-toggle="modal"
+                    <a href="{% url 'signup' %}" class="nav-link waves-effect" data-toggle="modal"
                        data-target="#ModalSign">SIGN-UP</a>
-                    <div class="modal fade" id="ModalSign" tabindex="-1" role="dialog"
-                         aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header text-center">
-                                    <h3>Sign-up</h3>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="form">
-
-                                    <div class="card-body py-md-4">
-                                        <form _lpchecked="1">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" id="name"
-                                                       placeholder="Name">
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="email" class="form-control" id="email"
-                                                       placeholder="Email">
-                                            </div>
-
-                                            <div class="form-group">
-                                                <input type="password" class="form-control" id="password"
-                                                       placeholder="Password">
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="password" class="form-control" id="confirm-password"
-                                                       placeholder="confirm-password">
-                                            </div>
-                                            <div class="d-flex flex-row align-items-center justify-content-between">
-
-                                                <input type="submit" value="Submit"/>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    {% include 'signup.html'%}
                 </li>
-
+                {% endif %}
             </ul>
         </div>
     </div>
