--- a/users/templates/user_page.html
+++ b/users/templates/user_page.html
@@ -15,8 +15,8 @@ Movie Catalog
       <a href="#" class="round-btn"><img class="icon" src="img/user.png" alt=""></a>
     </div>
     <div class="info">
-    <p>Name: {{username}}</p>
-    <p>Email: john.doe@example.com</p>
+    <p>Name: {{user.username}}</p>
+    <p>Email: {{user.email}}</p>
     <p>Membership: Premium</p>
   </div>
   </section>
