--- a/catalog/templates/catalog/movie_page.html
+++ b/catalog/templates/catalog/movie_page.html
@@ -88,33 +88,19 @@ Movie Catalog
 
             <section class="reviews">
                 <h2>Reviews</h2>
-                <form>
-                    <label for="rating">Rating:</label>
-                    <select id="rating" name="rating" required>
-                        <option value="">--Select a rating--</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select>
-                    <label for="review">Review:</label>
-                    <textarea name="review" id="review" rows="5"></textarea>
+                <form method="post">
+                    {% csrf_token %}
+                    {{form.as_p}}
                     <input type="submit" value="Submit">
                 </form>
                 <div class="user-reviews">
+                    {% for review in reviews%}
                     <div class="review">
-                        <h3>Reviewer Name</h3>
-                        <p class="rating">Rating: 4/5</p>
-                        <p class="review-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                            porttitor erat sed lectus fringilla, eu tincidunt risus hendrerit. Donec a nunc id ipsum
-                            congue convallis. Ut lobortis dui vel ante lobortis, nec sagittis metus dictum.</p>
+                        <h3>{{review.user.username}}</h3>
+                        <p class="rating">Rating: {{review.rating}}</p>
+                        <p class="review-text">{{review.comment}}</p>
                     </div>
-                    <div class="review">
-                        <h3>Reviewer Name</h3>
-                        <p class="rating">Rating: 5/5</p>
-                        <p class="review-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam</p>
-                    </div>
+                    {%endfor%}
                 </div>
         </section>
             </div>
