--- a/main/templates/main/header_layout.html
+++ b/main/templates/main/header_layout.html
@@ -50,9 +50,9 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto navbar-right">
-                {% if user.is_authenticated %}
+                {% if user.is_authenticated and not user.is_superuser%}
                 <li class="nav-item">
-                    <a href="{% url 'user' username=request.user.username %}" class="nav-link waves-effect">User</a>
+                    <a href="{% url 'user_profile' username=request.user.username %}" class="nav-link waves-effect">User</a>
                 </li>
                 <li class="nav-item">
                     <a href="{% url 'logout' %}" class="nav-link waves-effect">Log-out</a>
