--- a/users/templates/user_page.html
+++ b/users/templates/user_page.html
@@ -24,14 +24,46 @@ Movie Catalog
         <section id="movie-list">
             <h2>Favorite Movies</h2>
             <ul>
-                <li><img src="" alt="Movie Title"></li>
+                {% for movie in favourites.movies.all %}
+                <div class="card">
+                    <div class="image">
+                        <div class="wrapper">
+                            <a class="image" href="/movie/{{movie.id}}/" title="movie.cover_image">
+                                <img class="poster" src="{% static movie.cover_image %}" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="name"><a href="" title="{{movie.title}}">{{movie.title}}</a></div>
+
+                    <p>{{movie.release_date.year}} ‧ {% for genre in movie.genre.all %} {{genre}} ‧{% endfor %}
+                        {{movie.runtime}}</p>
+
+                    <p class="rating">Rating: {{movie.rating}}</p>
+                </div>
+                {% endfor %}
             </ul>
         </section>
 
         <section>
-            <h2>Save Movies</h2>
+            <h2>Saved Movies</h2>
             <ul>
-                <li><img src="" alt="Movie Title"></li>
+                {% for movie in saved.movies.all %}
+                <div class="card">
+                    <div class="image">
+                        <div class="wrapper">
+                            <a class="image" href="/movie/{{movie.id}}/" title="movie.cover_image">
+                                <img class="poster" src="{% static movie.cover_image %}" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="name"><a href="" title="{{movie.title}}">{{movie.title}}</a></div>
+
+                    <p>{{movie.release_date.year}} ‧ {% for genre in movie.genre.all %} {{genre}} ‧{% endfor %}
+                        {{movie.runtime}}</p>
+
+                    <p class="rating">Rating: {{movie.rating}}</p>
+                </div>
+                {% endfor %}
             </ul>
         </section>
     </div>
