--- a/catalog/static/catalog/css/catalog.css
+++ b/catalog/static/catalog/css/catalog.css
@@ -64,3 +64,38 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
   }
+
+  .pages {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination {
+  display: inline-block;
+}
+
+.pagination li {
+  display: inline;
+}
+
+.pagination li a,
+.pagination li span {
+  position: relative;
+  float: left;
+  padding: 6px 12px;
+  margin-left: -1px;
+  line-height: 1.428571429;
+  text-decoration: none;
+  color: #000000;
+  font-size:18px;
+  background-color: #fff;
+}
+
+.pagination li.active span {
+  z-index: 2;
+  color: #fff;
+  cursor: default;
+  background-color: #428bca;
+  border-color: #428bca;
+}
