--- a/catalog/static/catalog/css/movie_page.css
+++ b/catalog/static/catalog/css/movie_page.css
@@ -1,7 +1,8 @@
 @import url('https://unpkg.com/css.gg@2.0.0/icons/css/close-r.css');
 .movie {
   width: auto;
-  height: 435px
+  height: 435px;
+  margin-bottom: 14px;
 }
 
 section {
@@ -192,4 +193,12 @@ flex-direction: column;
 .review-header{
 display:flex;
 justify-content: space-between;
+}
+
+.movie-main{
+display:flex;
+flex-direction:column;
+ align-items: center;
+  justify-content: center;
+
 }
